# OpenCV3_samples

cvChapter4Ex/: cvChapter4Ex.pro  dialog.cpp  dialog.h  drawlines.cpp  drawlines.h
cv_ch6_ex4/: cv_ch6_ex4.pro  dialog.cpp  dialog.h  facewidgets.cpp  facewidgets.h
cv_ch8_ex3_b/: cv_ch8_ex3_b.pro  main.cpp  mainwindow.cpp  mainwindow.h
cv_ch8_ex4/: cv_ch8_ex4.pro  mainwindow.cpp  mainwindow.h
cv_ch8_ex5/: cv_ch8_ex5.pro  cv_ch8_ex5.pro.user.78a1491.4.8-pre1  mainwindow.cpp  mainwindow.h
opencv3/: main.cpp  opencv3.pro
opencv3/include/: Chapter1.h  Chapter2.h  Chapter3.h  Chapter4.h  Chapter5.h  Chapter6.h  Chapter7.h  Chapter8.h  MetaChapter.h
opencv3/src/: Chapter1.cpp  Chapter2.cpp  Chapter3.cpp  Chapter4.cpp  Chapter5.cpp  Chapter6.cpp  Chapter7.cpp  Chapter8.cpp  MetaChapter.cpp
opencv_cmake/: CMakeLists.txt  main.cpp
